--- a/wp-content/themes/bestway/custom.css
+++ b/wp-content/themes/bestway/custom.css
@@ -1,5 +1,34 @@
+.scroll-back-to-top-wrapper {
+	width: 100%;
+}
+
 body {
 	font-family: 'PT Sans', sans-serif;
+	font-size: 16px;
+	line-height: 1.8em;
+}
+.widget .widget_title {
+	font-size: 20px;
+}
+.widget ul li {
+	font-size: 16px;
+	font-family: 'Open Sans';
+}
+.widget ul li a {
+	font-size: 16px;	
+}
+.mom-recent-comments .author_comment .rc-post a {
+	color: #CEA36C;
+}
+.mom-recent-comments .author_comment .rc-post a:hover {
+	text-decoration: underline;
+}
+.mom-recent-comments .author_comment h4 {
+	font-size: 16px;
+	color: #3c3c3c;
+}
+.mom-recent-comments .author_comment.has_avatar {
+	margin-left: 70px;
 }
 
 .topbar ul.nav-menu li > a {
