--- a/wp-content/themes/bestway/custom.css
+++ b/wp-content/themes/bestway/custom.css
@@ -1,3 +1,7 @@
+.entry-content a {
+	text-decoration: underline;
+	color: #cea36c;
+}
 .entry-content img {
 	width: 100%;
 }
@@ -74,7 +78,7 @@ body {
 	padding: 25px 20px 25px 100px;
 }
 .attention_text a {
-	text-decoration: underline;
+	color: #3c3c3c;
 }
 
 @media screen and (max-width: 768px) {
