Breadcrumbs CSS fix

--- a/wp-content/themes/bestway/custom.css
+++ b/wp-content/themes/bestway/custom.css
@@ -9,6 +9,9 @@
 	line-height: 2em;
     	color: #cea36c;
 }
+.breadcrumbs a:hover {
+	text-decoration: underline;
+}
 
 .widget .widget_title {
 	line-height: 2em;
