--- a/wp-content/themes/bestway/custom.css
+++ b/wp-content/themes/bestway/custom.css
@@ -1,3 +1,30 @@
+em {
+	font-weight: 700;
+}
+ul, ol {
+	color: #cea36c;
+}
+ul {
+	list-style-type: square;
+}
+ol {
+	font-style:italic;
+	font-family:Georgia, Times, serif;
+	font-size: 20px;
+}
+ol li p {
+	font-size: 16px;
+	font-style: normal;
+	font-family: 'PT Sans', sans-serif;
+}
+ol li p, ul li p {
+	margin-bottom: 0;
+	color: #3c3c3c;
+}
+ol li p em, ul li p em {
+	display:block;
+}
+
 .scroll-back-to-top-wrapper {
 	height: 100%;
 }
